# Torch-TensorRT

./: README.md
core/plugins/: CMakeLists.txt  plugins.h  register_plugins.cpp
cpp/include/torch_tensorrt/: torch_tensorrt.h
